# neutralino-ext-rust

./: .gitignore  LICENSE  README.md  neutralino.config.json
extensions/rust/: Cargo.toml
extensions/rust/src/: main.rs  neutralino.rs  test.json
resources/: index.html
resources/js/: main.js  rust-extension.js
