[package]
name = "ext-rust"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
